# zephyr-os-study

./: .env.example  .gitignore  BOARD_REFERENCE.md  CMakeLists.txt  Makefile  README.md  app.overlay  custom_pins.overlay  prj.conf  west.yml
scripts/: clean_rebuild_microros.sh  fix_ros2_conflict.sh
src/: main.c
src/distance/: distance.c  distance.h
src/uros/: uros.c  uros.h
src/utils/: utils.c  utils.h
